File forward compatibility 4.0 to 3.6.5 - Redo panel not opening #114536

Closed
opened 2023-11-06 12:57:21 +01:00 by philgru · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.23

Blender Version
Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: cf1e1ed46b7e

Short description of error
After opening file made in 4.0 or above all viewport menues will not expand.

Exact steps for others to reproduce the error

Start new file in 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-11-04 10:02, hash: 23e3f8f56396
Save file
Open file with official 3.65
Create new mesh - e.g. circle
mesh menue stays closed (see screenshot)

thank you for your great work.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.23 **Blender Version** Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: `cf1e1ed46b7e` **Short description of error** After opening file made in 4.0 or above all viewport menues will not expand. **Exact steps for others to reproduce the error** Start new file in 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-11-04 10:02, hash: `23e3f8f56396` Save file Open file with official 3.65 Create new mesh - e.g. circle mesh menue stays closed (see screenshot) thank you for your great work.
philgru added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-11-06 12:57:21 +01:00
Iliya Katushenock added the
Interest
User Interface
label 2023-11-06 12:57:51 +01:00
Germano Cavalcante changed title from File backward compatibility 4.0 Beta to 3.65 viewport menue not opening to File forward compatibility 4.0 to 3.6.5 - Redo panel not opening 2023-11-06 20:21:07 +01:00
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-11-07 05:39:13 +01:00
Member

Raising the priority for awareness. I'll bisect.

Raising the priority for awareness. I'll bisect.
Pratik Borhade added this to the 3.6 LTS milestone 2023-11-07 05:39:56 +01:00
Member

4319c211dc has affected the redo panel
@JulianEisel ^

4319c211dc19fedd526cc39139da0a9b3b2f9d0f has affected the redo panel @JulianEisel ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-11 23:11:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114536
No description provided.