Fix #114536: Redo panel too small when opening 4.0 files in 3.6

Forward compatibility fix for the 3.6 branch only.

Problem is 4.0 sets the RGN_FLAG_NO_USER_RESIZE in versioning for
a number of regions. When reading 4.0 files this would match the
RGN_FLAG_PREFSIZE_OR_HIDDEN flag, causing wrong region sizes.

Pull Request: https://projects.blender.org/blender/blender/pulls/114715